<resources>
    <string name="app_name">News</string>
    <string name="copyright" translatable="false">Copyright © %1$d Ixuea. All Rights Reserved</string>
    <string name="video">视频</string>
    <string name="chat">聊天</string>
    <string name="category">分类</string>
    <string name="comments_count">%1$d条评论</string>
    <string name="reply">回复</string>
    <string name="reply_count">%1$d回复</string>
    <string name="show_reply_count">查看全部%1$d条回复</string>
    <string name="comments_count2">评论 %1$d</string>
    <string name="other_count">%1$d 赞 | 12 转发</string>
    <string name="comment_tip">友善评论</string>
    <string name="search_tip">搜索或输入网址</string>
    <string name="reply_comment">%1$s(作者): %2$s</string>
    <string name="publish">发布</string>
    <string name="reply_hint">回复%1$s</string>
    <string name="heart_solid">喜欢</string>
    <string name="video_info">%1$s次播放, by %2$s</string>
    <string name="count_format_ten_thousand">%1$d万</string>
    <string name="count_format_hundred_thousand">%1$d十万</string>
    <string name="count_format_million">%1$d百万</string>
    <string name="video_created_at">发布：%1$s</string>
    <string name="video_clicks_count">播放：%1$d</string>
    <string name="play_failed_time_out">播放超时，请稍候再试</string>
    <string name="play_failed">播放失败，请稍候再试</string>
    <string name="play_completion">播放完毕，点击重新播放</string>
    <string name="price">￥%1$.2f</string>
    <string name="price_int">￥%1d</string>
    <string name="activity_shop_detail">商品详情</string>
    <string name="go_study">立即学习</string>
    <string name="success_buy">已经购买了</string>
    <string name="activity_order_detail">订单详情</string>
    <string name="go_pay">去支付</string>
    <string name="error_loading">加载数据出错, 点击重新加载</string>
    <string name="error_pay_channel">支付渠道错误</string>
    <string name="hint_pay_wait">支付确认中</string>
    <string name="error_pay_cancel">支付取消</string>
    <string name="error_pay_failed">支付失败</string>
    <string name="pay_success">支付成功</string>
    <string name="buy_count">%1$d人购买</string>
    <string name="reset">重置</string>
    <string name="change_style">切换样式</string>
    <string name="collect_coupon">领券</string>
    <string name="buy_now">立即购买</string>
    <string name="add_cart">加入购物车</string>
    <string name="add_cart_success">加入购物车成功</string>
    <string name="product">商品</string>
    <string name="detail">详情</string>
    <string name="discovery">发现</string>
    <string name="valid_until">%1$s失效</string>
    <string name="get_now">立即领取</string>
    <string name="received">已领取</string>
    <string name="total">合计：</string>
    <string name="settle_account">结算</string>
    <string name="settle_account_count">结算(%1$d)</string>
    <string name="product_total_price">商品总价</string>
    <string name="freight">运费</string>
    <string name="free_freight">包邮</string>
    <string name="no_available">无可用</string>
    <string name="no_coupon">无优惠券</string>
    <string name="total_count">共%1$d件，合计：</string>
    <string name="available_count">%1$d张可用</string>
    <string name="confirm_order">确认订单</string>
    <string name="confirm_cancel_order">确认取消订单吗？</string>
    <string name="order_detail">订单详情</string>
    <string name="pay_order">支付订单</string>
    <string name="confirm_pay_price">确认付款</string>
    <string name="pay_remaining_time">支付剩余时间 %1$s</string>
    <string name="payment_before">请在%1$s之前完成支付</string>
    <string name="alipay">支付宝</string>
    <string name="wechat">微信</string>
    <string name="huabei_stages">花呗分期</string>
    <string name="confirm_exit_pay">确认放弃付款吗？</string>
    <string name="confirm_exit_pay_message">超过订单支付时效后，订单将被取消</string>
    <string name="confirm_departure">确认离开</string>
    <string name="continue_pay">继续支付</string>
    <string name="cancel_order">取消订单</string>
    <string name="delete_order">删除订单</string>
    <string name="change_address">修改地址</string>
    <string name="evaluate">评价</string>
    <string name="whole">全部</string>
    <string name="wait_pay">待付款</string>
    <string name="order_close">已关闭</string>
    <string name="wait_shipped">待发货</string>
    <string name="wait_received">待收货</string>
    <string name="wait_comment">待评价</string>
    <string name="amount_pay">应付金额</string>
    <string name="order_time">下单时间</string>
    <string name="order_no">订单编号</string>
    <string name="order_source">订单来源</string>
    <string name="pay_platform">支付平台</string>
    <string name="pay_channel">支付渠道</string>
    <string name="recognition_address_tip">粘贴文本，可以自动识别姓名，电话和地址\n例如：四川省成都市天府新区牧华路远大中央公园9栋1单元801 李薇 13141111222</string>
    <string name="recognition">识别</string>
    <string name="receive_name">收货姓名</string>
    <string name="receive_telephone">收货电话</string>
    <string name="receive_area">收货地区</string>
    <string name="detail_address">详细地址</string>
    <string name="default_address">默认地址</string>
    <string name="enter_receive_name">请输入收货姓名</string>
    <string name="enter_receive_telephone">请输入收货电话</string>
    <string name="enter_receive_area">请选择收货地区</string>
    <string name="enter_detail_address">请输入详细地址</string>
    <string name="select_address">请选择收货地址</string>
    <string name="ocr_error">百度OCR错误：%1$s，错误码：%2$d</string>
    <string name="voice_input">语音输入</string>
    <string name="stop_voice_input">停止语音输入</string>
    <string name="voice_error_no_result">没有识别结果，请声音大一点，并避开嘈杂的环境等</string>
    <string name="voice_error">百度语音识别错误：%1$s</string>
    <string name="product_count">x%1$d</string>
    <string name="retry">重试</string>
    <string name="customer_service">客服</string>
    <string name="default_address_text">[默认]</string>
    <string name="refund">退款</string>
    <string name="loading">加载中</string>
    <string name="upload_failed">上传失败，请稍后再试</string>
    <string name="loading_upload">上传第%1$d张图片</string>
    <string name="error_server_unknown_code">未知服务器错误错误码：%1$d</string>
    <string name="error_network">网络连接不可用</string>
    <string name="error_network_not_connect">你的网络好像不太好</string>
    <string name="error_connect_server">连接服务器失败</string>
    <string name="error_not_auth">登录信息过期,请重新登录</string>
    <string name="error_not_permission">没有权限访问</string>
    <string name="error_not_found">访问的内容不存在</string>
    <string name="error_server">服务器错误</string>
    <string name="error_unknown_host">找不到对应的主机</string>
    <string name="error_network_timeout">网络连接超时</string>
    <string name="error_unknown">未知错误</string>
    <string name="error_illegal_argument">参数错误</string>
    <string name="enter_nickname">请输入昵称(2~10位)</string>
    <string name="enter_name">请输入姓名</string>
    <string name="enter_phone">请输入手机号</string>
    <string name="enter_phone_or_email">请输入手机号或邮箱</string>
    <string name="enter_email">请输入邮箱</string>
    <string name="enter_confirm_password">请输入确认密码</string>
    <string name="enter_code">请输入验证码</string>
    <string name="error_nickname_format">昵称格式不正确</string>
    <string name="error_phone_format">手机号格式不正确</string>
    <string name="error_email_format">邮箱格式不正确</string>
    <string name="error_confirm_password_format">确认密码格式不正确</string>
    <string name="error_confirm_password">两次密码不正确</string>
    <string name="error_load">加载失败</string>
    <string name="enter_password">请输入密码(6~15位)</string>
    <string name="login">登录</string>
    <string name="forgot_password">忘记密码</string>
    <string name="error_username_format">用户名格式不正确</string>
    <string name="error_password_format">密码格式不正确</string>
    <string name="register_and_login">注册并登陆</string>
    <string name="complete">完成</string>
    <string name="please_enter">请输入</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="login_or_register">登录或注册</string>
    <string name="login_error">登录失败</string>
    <string name="code_login">验证码登录</string>
    <string name="username_login">用户名和密码登录</string>
    <string name="login_now">立即登录</string>
    <string name="logout">退出登录</string>
    <string name="register">立即注册</string>
    <string name="term_service_privacy">服务条款和隐私协议提示</string>
    <string name="agree">同意</string>
    <string name="disagree">不同意并退出应用</string>
    <string name="ad_click_tip">点击跳转详情页面查看更多</string>
    <string name="skip_ad_count">跳过广告%1$d</string>
    <string name="not_found_activity">找不到对应的应用</string>
    <string name="wifi_preload">WiFi预加载</string>
    <string name="experience_now">立即体验</string>
    <string name="user_agreement">
        <Data><![CDATA[
        登录即表示你同意《<a href="http://www.ixuea.com/articles/4449">用户协议</a>》和《<a href="http://www.ixuea.com/articles/4467">隐私政策</a>》
        ]]> </Data>
    </string>
    <string name="term_service_privacy_end" translatable="false">
        <Data><![CDATA[
            </body>
            </html>
        ]]> </Data>
    </string>
    <string name="term_service_privacy_content">
        <Data><![CDATA[
        <p>&nbsp;&nbsp;&nbsp;&nbsp;本软件尊重并保护所有使用服务用户的个人隐私权。为了给您提供更准确、更有个性化的服务，本软件会按照本隐私权政策的规定使用和披露您的个人信息。但本软件将以高度的勤勉、审慎义务对待这些信息。除本隐私权政策另有规定外，在未征得您事先许可的情况下，本软件不会将这些信息对外披露或向第三方提供。本软件会不时更新本隐私权政策。请你认真阅读并了解《<a href="http://www.ixuea.com/articles/4449">服务条款</a>》和《<a href="http://www.ixuea.com/articles/4467">隐私政策</a>》，您在同意本软件服务使用协议之时，即视为您已经同意本隐私权政策全部内容。本隐私权政策属于本软件服务使用协议不可分割的一部分。</p>

        <p>1.适用范围</p>

        <p>&nbsp;&nbsp;&nbsp;&nbsp;1.1 在您使用本软件网络服务，本软件自动接收并记录的您的手机上的信息，包括但不限于您的健康数据、使用的语言、访问日期和时间、软硬件特征信息及您需求的网页记录等数据；</p>

        <p>2.信息的使用</p>

        <p>&nbsp;&nbsp;&nbsp;&nbsp;2.1 在获得您的数据之后，本软件会将其上传至服务器，以生成您的排行榜数据，以便您能够更好地使用服务。</p>

        <p>3.信息披露</p>

        <p>&nbsp;&nbsp;&nbsp;&nbsp;3.1 本软件不会将您的信息披露给不受信任的第三方。</p>

        <p>&nbsp;&nbsp;&nbsp;&nbsp;3.2 根据法律的有关规定，或者行政或司法机构的要求，向第三方或者行政、司法机构披露；</p>

        <p>&nbsp;&nbsp;&nbsp;&nbsp;3.3 如您出现违反中国有关法律、法规或者相关规则的情况，需要向第三方披露；</p>

        <p>4. 信息存储和交换</p>

        <p>&nbsp;&nbsp;&nbsp;&nbsp;本软件收集的有关您的信息和资料将保存在本软件及（或）其关联公司的服务器上，这些信息和资料可能传送至您所在国家、地区或本软件收集信息和资料所在地的境外并在境外被访问、存储和展示。</p>

        <p>5.信息安全</p>

        <p>&nbsp;&nbsp;&nbsp;&nbsp;在使用本软件网络服务进行网上交易时，您不可避免的要向交易对方或潜在的交易对方披露自己的个人信息，如联络方式或者邮政地址。请您妥善保护自己的个人信息，仅在必要的情形下向他人提供。如您发现自己的个人信息泄密，请您立即联络本软件客服，以便本软件采取相应措施。</p>
    ]]> </Data>
    </string>
    <string name="buy_vip">开通黑胶VIP</string>
    <string name="member_center">会员中心</string>
    <string name="vip_hint">加入黑胶VIP，彰显语种不同</string>
    <string name="vip_hint_price">专享特惠，黑胶首月仅0.01元！</string>
    <string name="my_friend">我的好友</string>
    <string name="my_fans">我的粉丝</string>
    <string name="coupon">优惠券</string>
    <string name="short_video">短视频</string>
    <string name="my_code">我的二维码</string>
    <string name="shop">商品</string>
    <string name="mall">官方商城</string>
    <string name="shop_cart">购物车</string>
    <string name="my_order">我的订单</string>
    <string name="other">其他</string>
    <string name="setting">设置</string>
    <string name="dark_mode">夜间模式</string>
    <string name="timed_off">定时关闭</string>
    <string name="person_dress">个性装扮</string>
    <string name="cache_while_list">边听边缓存</string>
    <string name="music_alarm_clock">音乐闹钟</string>
    <string name="my_customer_service">我的客服</string>
    <string name="share_app">分享我的云音乐</string>
    <string name="about">关于</string>
    <string name="about_code">关于（纯代码布局）</string>
    <string name="not_open">未开启</string>
    <string name="message_notification_count">[%1$d条]：%2$s</string>
    <string name="channel_chat_message">消息通知</string>
    <string name="channel_music">音乐通知</string>
    <string name="channel_default">默认通知</string>
    <string name="confirm_logout">确认退出吗？</string>
    <string name="close_app">关闭应用</string>
    <string name="hint_title">请输入标题</string>
    <string name="hint_content">请输入内容</string>
    <string name="current_position">当前位置</string>
    <string name="not_show_position">不显示位置</string>
    <string name="hint_current_position">所在位置：</string>
    <string name="hint_count">0/1000</string>
    <string name="error_content_length">内容不能超过1000字符</string>
    <string name="feed_count">%1$d/1000</string>
    <string name="message_no_format">微聊号：%1$s</string>
    <string name="receiving_address">收货地址</string>
</resources>