<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/padding_large">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:text="@string/term_service_privacy"
        android:textColor="?attr/colorOnSurface"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="@dimen/padding_large">

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/term_service_privacy_content"
            android:textColor="?attr/colorOnSurface"
            android:textSize="15sp" />

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/primary"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/agree"
        app:cornerRadius="@dimen/d27_5"/>

    <Button
        android:id="@+id/disagree"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:background="@color/transparent"
        android:text="@string/disagree"
        android:textColor="@color/black80"
        android:textSize="13sp"/>

</LinearLayout>